logs/abl.vpath.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/abl'...
Listing './lib/python3.5/site-packages/abl/util'...
Compiling './lib/python3.5/site-packages/abl/util/lockfile.py'...
***   File "./lib/python3.5/site-packages/abl/util/lockfile.py", line 42
    except OSError, e:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/abl/vpath'...
Listing './lib/python3.5/site-packages/abl/vpath/base'...
Compiling './lib/python3.5/site-packages/abl/vpath/base/fs.py'...
***   File "./lib/python3.5/site-packages/abl/vpath/base/fs.py", line 151
    print "### Exception while closing connection %s" % conn
                                                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/abl/vpath/base/memory.py'...
***   File "./lib/python3.5/site-packages/abl/vpath/base/memory.py", line 330
    except OSError, e:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/abl/vpath/base/uriparse.py'...
***   File "./lib/python3.5/site-packages/abl/vpath/base/uriparse.py", line 89
    def uriunsplit((scheme, authority, path, query, fragment)):
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/abl/vpath/base/zipfile26.py'...
***   File "./lib/python3.5/site-packages/abl/vpath/base/zipfile26.py", line 364
    raise RuntimeError, "Corrupt extra field %s"%(ln,)
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/abl.util-0.1.16.egg-info'...
Listing './lib/python3.5/site-packages/abl.vpath-0.8.egg-info'...
Listing './lib/python3.5/site-packages/decorator-4.1.2.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
